@startuml

class Cinema {
  id: int
  nome: str
  cidade: str
  estado: str
  endereco: str
  capacidade: int
}

class Filme {
  id: int
  titulo: str
  duracao: int
  genero: str
  diretor: str
  elenco: str
}

class Sessao {
  id: int
  cinema_id: int
  filme_id: int
  data_hora: str
  publico: int
  --
  calcular_ocupacao(capacidade): float
}

Cinema "1" -- "*" Sessao
Filme "1" -- "*" Sessao

@enduml